# pidgin-plugin-whatsapp

./: CMakeLists.txt  Makefile  README.md  install-purple-whatsapp.sh  whatsmeow_bridge.go
src/c/: plugin.c
src/go/: bridge.h
